--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<div class="content">
 							<p>Linguagem de programação e banco de dados, estatística, algoritmos, visualização de dados, engenharia de software e softskills</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Python com foco em análise de dados</li>
+								<li class="icon solid fa-laptop">Python para análise de dados</li>
 								<li class="icon solid fa-code-branch">SQL e MySQL</li>
 								<li class="icon solid fa-signal">Estatística descritiva</li>
 								<li class="icon solid fa-cube">Algoritmos de Regressão</li>
@@ -89,7 +89,7 @@
 						<div class="content">
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header>
 										<h3>Programa de Fidelidade com clusterização de clientes</h3>
 										<p>Utilizei Python, estatística e técnicas não-supervisionadas de Machine Learning para segmentar um grupo de clientes com base em suas características de performance de compra a fim de selecionar grupos de clientes para formar um programa de fidelidade com objetivo de aumentar a receita da empresa. Caso fosse implementado, o resultado seria de US$ 15 MM de receita anual.</p>
@@ -109,6 +109,31 @@
 										<li>Metabase Visualization</li>
 									</ul>
 									<button class="button primary long"><a href="#"></a>Saiba mais</button>
+									</div>
+									
+								</section> -->
+
+								<section>
+									<header>
+										<h3>Painel Gerencial para Marketplace com o Stremlit</h3>
+										<p>Nesse projeto, os conceitos de Programação em Python, manipulação de	dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimetno web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida na India.</p>
+										<p>O resultado do projeto foi um painel online, hospedado em um ambiente Cloud, disponibilizado através de um link web acessível de qualquer dispositivo conectado à internet.</p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="img/img_KPI.jpg" class="landscape"><img src="img/img_KPI.jpg" alt="" /></a>
+										</div>
+										<p></p>
+									<p><strong>Ferramentas utilizadas</strong></p>
+									<ul>
+										<li>Python</li>
+										<li>Jupyter Lab</li>
+										<li>Terminal</li>
+										<li>Streamlit</li>
+										<li>Streamlit Cloud</li>
+										<li>Github</li>
+									</ul>
+									<button class="button primary long"><a href="https://github.com/felipevalory/Curry-Company"></a>Saiba mais</button>
 									</div>
 									
 								</section>
