--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<li class="icon solid fa-code-branch">SQL e MySQL</li>
 								<li class="icon solid fa-signal">Estatística descritiva</li>
 								<li class="icon solid fa-cube">Algoritmos de Regressão</li>
-								<li class="icon solid fa-filter">Machine Learning</li>
+								<li class="icon solid fa-atom">Machine Learning</li>
 								<li class="icon solid fa-code">Git e Github</li>
 								<li class="icon solid fa-users">Trabalho em equipe</li>
 								<li class="icon solid fa-pen">Resolução de problemas</li>
