--- a/index.html
+++ b/index.html
@@ -126,14 +126,12 @@
 										<p></p>
 									<p><strong>Ferramentas utilizadas</strong></p>
 									<ul>
-										<li>Python</li>
-										<li>Jupyter Lab</li>
-										<li>Terminal</li>
-										<li>Streamlit</li>
-										<li>Streamlit Cloud</li>
-										<li>Github</li>
+										<li>Python, terminal e Jupyter Lab</li>
+										<li>Mapas interativos com Plotly e Folium</li>
+										<li>Streamlit e Streamlit Cloud</li>
+										<li>Git e Github</li>
 									</ul>
-									<button class="button primary long"><a href="https://github.com/felipevalory/Curry-Company"></a>Saiba mais</button>
+									<a href="https://github.com/felipevalory/Curry-Company" class="button primary long">Saiba mais</a>
 									</div>
 									
 								</section>
