--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								<section>
 									<header>
 										<h3>Painel Gerencial para Marketplace com o Streamlit</h3>
-										<p>Nesse projeto, os conceitos de Programação em Python, manipulação de	dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimento web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida na Índia.</p>
+										<p>Nesse projeto, os conceitos de Programação em Python, ETL, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimento web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida na Índia.</p>
 										<p>O resultado do projeto foi um painel online, hospedado em um ambiente Cloud, disponibilizado através de um link web acessível de qualquer dispositivo conectado à internet.</p>
 									</header>
 									<div class="content">
