Add new project Machine Learning

--- a/index.html
+++ b/index.html
@@ -136,6 +136,28 @@
 									
 								</section>
 
+								<section>
+									<header>
+										<h3>Ensaios de Machine Learning</h3>
+										<p>Análise de performance de modelos de Machine Learning com algoritmos de Classificação, Regressão e Clusterização, ajustando os principais parâmetros que controlam o overfitting e underfitting com objetivo de aprofundar o entendimento sobre como otimizar cada modelo, garantindo resultados precisos e consistentes.</p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="https://github.com/felipevalory/Machine_Learning" class="landscape"><img src="img/img_AI.jpg" alt="" /></a>
+										</div>
+											<p></p>
+											<p><strong>Ferramentas utilizadas</strong></p>
+											<ul>
+												<li>Algoritmos de Regressão, Classificação e Clusterização</li>
+												<li>Métricas de Performance (RMSE, MSE, MAE, MAPE, Precision, Recall, ROC, F1-Score, Silhouette Score e R2) </li>
+												<li>Pacotes de Machine Learning Sklearn</li>
+												<li>Jupyter Notebook</li>
+											</ul>
+											<button class="button primary long"><a href="https://github.com/felipevalory/Machine_Learning"></a>Saiba mais</button>
+										
+									</div>
+								</section>
+
 							<!-- Section -->
 								<section>
 									<header>
