--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 												<li>Pacotes de Machine Learning Sklearn</li>
 												<li>Jupyter Notebook</li>
 											</ul>
-											<button class="button primary long"><a href="https://github.com/felipevalory/Machine_Learning"></a>Saiba mais</button>
+											<a href="https://github.com/felipevalory/Machine_Learning" class="button primary long">Saiba mais</a>
 										
 									</div>
 								</section>
