--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
 								<li>Implementei um dashboard interativo para monitoramento do progresso de obras, aumentando a eficiência do gerenciamento de projetos em 25%.</li>
 									
 								<li>Liderei uma equipe de quatro pessoas, aplicando metodologias ágeis e aumentando a produtividade em 15%.</li>
-									
-								<p>Análise de dados · Estatística · Gestão de projetos · Resolução de problemas</p>
 
 							</ul>
+
+							<p>· Análise de dados · Estatística · Gestão de projetos · Resolução de problemas</p>
 						</div>
 					</section>
 					<section>
