--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								<section>
 									<header>
 										<h3>Previsão de vendas de rede de Drogaria</h3>
-										<p>Foi desenvolvido um bot no Telegram para que as previsões de venda das próximas seis semanas de cada loja da rede de Drogaria Rossmann pudessem ser acessadas de forma prática, em tempo real em qualquer dispositivo conectado à internet.</p>
+										<p>Desenvolvi um modelo de Machine Learning para prever as vendas das lojas da rede de Drogaria Rossmann e que pode ser acessado por um bot no Telegram de forma prática, em tempo real em qualquer dispositivo conectado à internet.</p>
 										<p>Apliquei técnicas avançadas de Machine Learning, metodologias ágeis, análise de dados, métricas de negócio, estatística descritiva e outros para elaborar todo o projeto.</p>
 									</header>
 									<div class="content">
