--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://github.com/felipevalory/Churn_Bank" class="landscape"><img src="img/img_structure.jpg.jpg" alt="" /></a>
+											<a href="https://github.com/felipevalory/Churn_Bank" class="landscape"><img src="img/img_structure.jpg" alt="" /></a>
 										</div>
 											<p></p>
 											<p><strong>Ferramentas utilizadas</strong></p>
