Cross sell project

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 								</section> -->
 
 								
-								<section>
+								'<section>
 									<header>
 										<h3>Cross sell para clientes de uma seguradora</h3>
 										<p>Uma empresa de seguros com clientes que já possuem seguro saúde, pretende vender também o seguro automotivo (cross-sell). O objetivo foi priorizar potenciais clientes para compra de seguro automotivo com base em um score de propensão gerado por modelos de machine learning. Ou seja, gerar um lista ranqueada de clientes potenciais de compra do seguro veicular. .</p>
@@ -137,7 +137,7 @@
 											<a href="https://github.com/felipevalory/InsuranceCrossSell" class="button primary long">Saiba mais</a>
 										
 									</div>
-								</section>
+								</section>'
 
 								<section>
 									<header>
