--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://github.com/felipevalory/InsuranceCrossSell" class="landscape"><img src="img/img_car_insurance.jpg" alt="" /></a>
+											<a href="https://github.com/felipevalory/InsuranceCrossSell" class="landscape"><img src="" alt="" /></a>
 										</div>
 											<p></p>
 											<p><strong>Ferramentas utilizadas</strong></p>
