--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 								'<section>
 									<header>
 										<h3>Cross sell para clientes de uma seguradora</h3>
-										<p>Uma empresa de seguros com clientes que já possuem seguro saúde, pretende vender também o seguro automotivo (cross-sell). O objetivo foi priorizar potenciais clientes para compra de seguro automotivo com base em um score de propensão gerado por modelos de machine learning. Ou seja, gerar um lista ranqueada de clientes potenciais de compra do seguro veicular. .</p>
+										<p>Uma empresa de seguros com clientes que já possuem seguro saúde, pretende vender também o seguro automotivo (cross-sell). O objetivo foi priorizar potenciais clientes para compra de seguro automotivo com base em um score de propensão gerado por modelos de machine learning. Ou seja, gerar um lista ranqueada de clientes potenciais de compra do seguro veicular.</p>
 										<p>O modelo apresentou capacidade de identificar 80% dos clientes interessados ao segmentar 33% da base total. Os resultados indicam um aumento potencial de US$ 26 milhões em receita, com o modelo sendo 2,5 vezes mais eficiente que uma abordagem aleatória.</p>
-										<p>A solução traduziu resultados técnicos em ganhos tangíveis para o negócio, otimizando o foco da equipe de vendas e reduzindo custos de aquisição. </p>
+										<p>A solução traduziu resultados técnicos em ganhos tangíveis para o negócio, otimizando o foco da equipe de vendas e reduzindo custos de aquisição.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
